--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 <body>
 	<div class="container">
        
-		<div id="buttons"></div>
+		<div id="buttons"> 
+		
+		<button id="button-rock">Kamień</button>
+		<button id="button-paper">Papier</button>
+		<button id="button-scissor">Nożyce</button>
 		<div id="messages"> </div>
+		</div>
 	</div>
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
