--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<h1 class="page-title">Witaj</h1>
+	<h2> Gotowy na grę?</h2>
 	<div class="container">
        
 		<div id="buttons"> 
